<resources>
    <string name="app_name">BaseDatal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="new_register">Nuevo registro</string>
    <string name="guardar">Guardar</string>
    <string name="descripcion_ciudad">Descripcion Ciudad</string>
    <string name="poblacion_ciudad">poblacion Ciudad</string>
    <string name="poblacionCiudad">Poblacion Ciudad</string>
    <string name="descripcion_de_la_ciudad">Descripcion de la Ciudad</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="editar_registro">Editar Registro</string>
</resources>