<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNameCity"
        android:text="@string/city"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescriptionCity"
        android:text="@string/descripcion_ciudad"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPopulationCity"
        android:text="@string/poblacion_ciudad"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"

        />

    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="188dp"
        android:contentDescription="@string/edit"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPopulationCity" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="188dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete_foreground"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>